<resources>

    <string name="app_name">Bluetooth2</string>
    <string name="title_activity_main">Bluetooth2</string>
    <string name="btn_ON">KILL ON</string>
    <string name="btn_OFF">KILL OFF</string>
    <string name="forwardButton">Forward</string>
    <string name="reverseButton">Reverse</string>
    <string name="rightButton">Right</string>
    <string name="rightForwardButton">F. Right</string>
    <string name="leftButton">Left</string>
    <string name="leftForwardButton">F. Left</string>
    <string name="leftReverseButton">R. Left</string>
    <string name="rightReverseButton">R. Right</string>
    <string name="title">Large Text</string>
    <string name="appSubtitle">Go! Team 3 Go!</string>
    <string name="killSwitchButton">New ToggleButton</string>

</resources>