<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="#ffe5e9ff">

    <Button
        android:id="@+id/btnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_OFF"
        android:layout_marginBottom="48dp"
        android:layout_above="@+id/sixClock"
        android:layout_alignRight="@+id/btnOn" />

    <Button
        android:id="@+id/btnOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ON"
        android:layout_above="@+id/threeClock"
        android:layout_alignRight="@+id/twelveClock" />

    <TextView
        android:id="@+id/txtArduino"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forwardButton"
        android:id="@+id/twelveClock"
        android:layout_marginBottom="45dp"
        android:layout_above="@+id/btnOn"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reverseButton"
        android:id="@+id/sixClock"
        android:layout_marginBottom="97dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnOn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rightButton"
        android:id="@+id/threeClock"
        android:layout_above="@+id/btnOff"
        android:layout_alignParentRight="true"
        android:layout_marginRight="37dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rightForwardButton"
        android:id="@+id/oneClock"
        android:layout_above="@+id/btnOn"
        android:layout_alignRight="@+id/threeClock" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leftButton"
        android:id="@+id/nineClock"
        android:layout_marginRight="39dp"
        android:layout_below="@+id/btnOn"
        android:layout_toLeftOf="@+id/btnOff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leftForwardButton"
        android:id="@+id/elevenClock"
        android:layout_above="@+id/btnOn"
        android:layout_alignLeft="@+id/nineClock" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leftReverseButton"
        android:id="@+id/sevenClock"
        android:layout_above="@+id/sixClock"
        android:layout_alignRight="@+id/elevenClock" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rightReverseButton"
        android:id="@+id/fiveClock"
        android:layout_above="@+id/sixClock"
        android:layout_alignRight="@+id/threeClock" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Car Control App"
        android:id="@+id/appTitle"
        android:layout_below="@+id/txtArduino"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/appSubtitle"
        android:id="@+id/appSubtitle"
        android:layout_below="@+id/appTitle"
        android:layout_centerHorizontal="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/killSwitch"
        android:layout_alignTop="@+id/sixClock"
        android:layout_toRightOf="@+id/appTitle"
        android:layout_marginTop="45dp"
        android:checked="false"
        android:longClickable="true" />

</RelativeLayout>

